// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots tests renders TextField component 1`] = `
<Fragment>
  <WithStyles(ForwardRef(TextField))
    InputLabelProps={
      Object {
        "hidden": false,
        "htmlFor": "undefined",
        "id": "undefined-label",
        "shrink": undefined,
      }
    }
    error={false}
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id="undefined"
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "undefined-label",
        "id": "undefined",
        "label": undefined,
      }
    }
    name="testField"
    type="text"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component appending a class 1`] = `
<Fragment>
  <WithStyles(ForwardRef(TextField))
    InputLabelProps={
      Object {
        "hidden": false,
        "htmlFor": "undefined",
        "id": "undefined-label",
        "shrink": undefined,
      }
    }
    className="requiredField"
    error={false}
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id="undefined"
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "undefined-label",
        "id": "undefined",
        "label": undefined,
      }
    }
    name="testField"
    type="text"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component with shrink:true 1`] = `
<Fragment>
  <WithStyles(ForwardRef(TextField))
    InputLabelProps={
      Object {
        "hidden": false,
        "htmlFor": "undefined",
        "id": "undefined-label",
        "shrink": true,
      }
    }
    error={false}
    floatingLabelText="This is a test textfield component"
    floatinglabelfixed={true}
    fullWidth={true}
    id="undefined"
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "undefined-label",
        "id": "undefined",
        "label": undefined,
      }
    }
    name="testField"
    type="text"
  />
</Fragment>
`;
